--- a/index.html
+++ b/index.html
@@ -30,18 +30,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="--bs-primary: #a0c191;--bs-primary-rgb: 160,193,145;background: #1f1f1f;">
-        <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="curriculum-vitae.html">Resume</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <main class="page lanidng-page">
-        <section class="portfolio-block block-intro" style="padding-top: 47px;">
+        <section class="portfolio-block block-intro" style="padding-top: 47px;color: rgb(255,255,255);">
             <div class="container" style="margin-top: 100px;">
                 <div class="row">
                     <div class="col-md-6 col-xxl-6 text-bg-light flex-grow-1" style="padding-top: 22px;padding-bottom: 0px;margin-bottom: 0px;">
@@ -50,6 +40,164 @@
                         <p style="font-size: 18px;margin-top: 12px;text-align: left;">I am currently pursuing a Bachelor of Technology degree in Computer Science and Engineering at D.Y. Patil International University, specializing in the fascinating realm of AI.<br><br>I have a strong interest in various research areas of machine learning and artificial intelligence, including Large Language Models, Human-Computer Interaction (HCI), Adversary Machine Learning, Interpretability.<br><br>In my studies and independent projects, I actively work with state-of-the-art AI technologies to expand my expertise. I am particularly passionate about conducting research at the intersection of data-driven NLP, TrustworthyML, computer vision, generative AI models.<br><br>I am always eager to tackle new challenges that combine my enthusiasm for technology with interdisciplinary collaboration. My goal is to conduct research that manifests theoretical ideas into practical tools with measurable impact. I believe bringing together diverse perspectives leads to truly transformative innovation.</p>
                     </div>
                     <div class="col-md-6 col-lg-6 offset-lg-0"><img class="rounded img-fluid border rounded-circle border-3 border-light" width="520" height="520" src="assets/img/main-assest/pfp.jpg" style="padding-top: 0px;transform: rotate(0deg) skew(0deg);margin-top: 77px;"></div>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-block cv">
+            <div class="container">
+                <div class="group">
+                    <div class="row d-xxl-flex justify-content-xxl-center" style="margin-top: 9px;">
+                        <div class="col-md-6 col-xl-12" style="text-align: center;">
+                            <div class="border rounded border-0 contact-info portfolio-info-card">
+                                <h2>Research Interests</h2>
+                                <p>Machine Learning; Natural Language Processing; AI Alignment; Large Language Models; Human-Computer Interaction (HCI); Adversary Machine Learning; Interpretability</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-experience group">
+                    <div class="heading">
+                        <h2 class="text-center">Experience</h2>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3><strong><span style="color: rgba(0, 0, 0, 0.9);">Research Assistant</span></strong></h3><span class="badge rounded-pill bg-primary" style="transform: scale(1);">Indian School of Business</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Sep 2024 - Present</span></div>
+                        </div>
+                        <p>• Developing a custom NLP pipeline with Vision OCR, Text Classification and Token Classification models using Open LLMs.</p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3><strong><span style="color: rgba(0, 0, 0, 0.9);">Research Intern</span></strong></h3><span class="badge rounded-pill bg-primary" style="transform: scale(1);">CISPA Helmholtz Center for Information Security</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Jun 2024 — Present</span></div>
+                        </div>
+                        <p><span style="color: rgba(0, 0, 0, 0.9);">• Topic of Research: "Privacy Preserving Generation with Large Language Models"</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Researching on Private Large Language Models using various Differential Privacy Frameworks.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Analyzing several pre-training/fine-tuning methods and model behavior on various downstream tasks.</span></p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3><strong><span style="color: rgba(0, 0, 0, 0.9);">Research Assistant</span></strong></h3><span class="badge rounded-pill bg-primary" style="transform: scale(1);">Indian School of Business</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Aug 2023 — Jan 2024</span></div>
+                        </div>
+                        <p><strong>• Developed NLP Classifier Models on a daily basis, achieving high accuracy rates exceeding 95%, demonstrating strong data analysis and modeling skills.</strong><br><strong>• Expertly finetuned large transformer models, attaining precision and reliability, resulting in improved model performance and efficiency.</strong><br><strong>• Created Transformer models for Sequence Classification, Sequence Generation, and Token Classification on a daily basis, showcasing consistent innovation and adaptability.</strong><br><strong>• Specialized in developing customized Named Entity Recognition (NER) solutions, optimizing data extraction and information retrieval processes.</strong><br><strong>• Proficiently worked with Big Data to analyze patterns and successfully deployed developed models, contributing to data-driven insights and decision-making.</strong></p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>AWS &amp; Machine Learning Intern</h3><span class="badge rounded-pill bg-primary">F13 Technologies</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Mar 2023 — Jun 2023</span></div>
+                        </div>
+                        <p><span style="color: rgba(0, 0, 0, 0.9);">• Worked with AWS EC2, EBS, and S3 to host and develop websites.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Successfully migrated non-AWS web applications to AWS infrastructure.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Developed a sophisticated Content Recommendation system using AWS Personalize.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Gained hands-on experience with over 50 AWS services during the training period.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Proficient in utilizing tools like AWS Cost Calculator to optimize cloud resources.</span></p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-6">
+                                <h3>Research Intern</h3><span class="badge rounded-pill bg-primary">National Institute of Technology Patna (NITP)</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Jun 2022 — Aug 2022</span></div>
+                        </div>
+                        <p>• Topic of research: Agile motion of quadrupedal locomotion using Quad-SDK<br>• Testing Deep Learning Algorithm efficiency for better obstacle detection and increasing accuracy by 25%.<br>• Using an efficient control scheme to increase in terrain mapping accuracy by 12.7% when using the right number of contours.<br>• Global Planner’s code was optimized for a movement speed boost of 15%.<br>• Tools &amp; Languages used: Linux, Git, ROS, Quad-SDK, Python, Catkin</p>
+                    </div>
+                </div>
+                <div class="education group">
+                    <div class="heading">
+                        <h2 class="text-center">Education</h2>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>B. Tech — Computer Science &amp; Engineering</h3><span class="badge rounded-pill bg-success">D. Y. Patil International University</span>
+                            </div>
+                            <div class="col-6"><span class="text-muted period">Oct 2021 — 2025</span></div>
+                        </div>
+                        <p><strong>List of courses: Data Structures, Design &amp; Analysis of Algorithms, Principles of Data Science, Intelligent Systems, Digital Signal Processing, Deep Neural Networks, High Performance Computing &amp; Game Theory</strong><br><br><strong>Clubs &amp; Co-Curriculars: TEDx Conferences, Google Development Students Club, Tech Cohorts and Hackathons.</strong></p>
+                    </div>
+                </div>
+                <div class="education group">
+                    <div class="heading">
+                        <h2 class="text-center">Projects</h2>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Otaku Engine</h3>
+                            </div>
+                            <div class="col-6"><span class="text-muted period">May 2023</span></div>
+                        </div>
+                        <p>Otaku Engine is a content recommendation system for anime enthusiasts (weebs). It leverages machine learning techniques to provide personalized anime recommendations based on user interactions and ratings.</p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Twitter Tweet Classification Model</h3>
+                            </div>
+                            <div class="col-6"><span class="text-muted period">May 2023</span></div>
+                        </div>
+                        <p>Tweet Classification using Natural Language Processing. This NLP model classifies tweets as Disaster Tweets (1) or Non-Disaster Tweets (0). Model uses Logistic Regression(tf-idf), Naive Bayes(tf-idf), Logistic Regression to train the model and classify tweets.</p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>iIMS — Intelligent Infrastructure Management System</h3><span class="badge rounded-pill bg-danger" style="--bs-danger: #9d35dc;--bs-danger-rgb: 157,53,220;">Industry Project</span>
+                            </div>
+                            <div class="col-6"><span class="text-muted period">Jun 2022 — Aug 2022</span></div>
+                        </div>
+                        <p>An AI system aims to solve the obstacles faced by universities/organizations in making optimal use of infrastructure using OpenCV and ML Frameworks.</p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>AI Maze Solver</h3>
+                            </div>
+                            <div class="col-6"><span class="text-muted period">Feb 2022</span></div>
+                        </div>
+                        <p>AI based Maze Solver uses DFS or BFS Algorithm to encounter and solve maze's and helps you analyze which search problem has less path cost in similar scenarios.</p>
+                    </div>
+                </div>
+                <div class="group">
+                    <h2 class="text-center">Skills</h2>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="border rounded border-0 skills portfolio-info-card">
+                                <h2>Programming Languages</h2>
+                                <p><span style="font-weight: normal !important;">Python (w. RegEx), C++, C#, JavaScript, MySQL, MQL &amp; Git</span></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="border rounded border-0 contact-info portfolio-info-card">
+                                <h2>Tools &amp; Technologies</h2>
+                                <p>Machine Learning (Transformers, TensorFlow &amp; PyTorch), NLP, Computer Vision, Power BI &amp; MongoDB</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top: 9px;">
+                        <div class="col-md-6">
+                            <div class="border rounded border-0 skills portfolio-info-card">
+                                <h2>Cloud</h2>
+                                <p><span style="font-weight: normal !important;">AWS S3, EC2, Sagemaker, DynamoDB, Lambda and other popular AWS services.</span></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="border rounded border-0 contact-info portfolio-info-card">
+                                <h2>Collaboration &amp; Productivity</h2>
+                                <p>Asana, ClickUp, Notion, Jira, Miro &amp; Deepnote</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row d-xxl-flex justify-content-xxl-center" style="margin-top: 9px;">
+                        <div class="col-md-6 col-xl-12" style="text-align: center;">
+                            <div class="border rounded border-0 contact-info portfolio-info-card">
+                                <h2>Additional Design Tools&nbsp;</h2>
+                                <p>Adobe XD, Figma, Blender, Cinema 4D &amp; Unreal Engine</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
