--- a/publications.html
+++ b/publications.html
@@ -23,14 +23,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="--bs-primary: #a0c191;--bs-primary-rgb: 160,193,145;background: #1f1f1f;">
-        <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="curriculum-vitae.html">Resume</a></li>
-                </ul>
-            </div>
-        </div>
+        <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a></div>
     </nav>
     <main class="page projets-page">
         <section class="portfolio-block project-no-images">
